# opencvfilter

./: CMakeLists.txt  README.md  cvfilter.cpp  cvfilter.h  cvplugin.c
